sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:13: error: ';' expected but ')' found.
 						inv = true) ;
                                                          ^AlgBubbleSort1:17: error: '(' expected but '}' found.
 	}
        ^AlgBubbleSort1:23: error: 'while' expected but '}' found.
}
^